hphp/hack/test/typecheck/instanceof/instanceof_gadt.php.rust_elab.exp
File "instanceof_gadt.php", line 41, characters 6-10:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
